--- a/src/styles/md.css
+++ b/src/styles/md.css
@@ -1,12 +1,3 @@
-/* body {
-  font-family: "Helvetica Neue", sans;
-  background: #ffffff;
-  color: #222;
-  line-height: 1.5em;
-  font-size: 16px;
-  font-weight: 300;
-}
-
 img {
   margin: 0;
   border: 0;
@@ -48,7 +39,7 @@ h6 {
   color: #003a6b;
   background-color: transparent;
   margin: 1em 0;
-  font-weight: normal;
+  font-weight: bolder;
 }
 
 h1 {
@@ -140,4 +131,4 @@ th {
 
 th {
   background-color: #f5f5f5;
-} */
+}
